--- a/data/config.html
+++ b/data/config.html
@@ -366,12 +366,15 @@
                     <input type="number" step="1" class="form-control form-control-user" id="SCT_13" placeholder="%SCT_13%">
                   </div>
                 </div>
+	            <br>				
 
                 <div class="form-group row">
-                  <div class="col-sm-12" data-toggle="popover" data-placement="top" data-bs-content="Pour inverser la mesure sans toucher à la sonde">Inversion de la mesure <i class="text-secondary fas fa-info-circle"></i> </div>
-				  
+                  <div class="col-sm-5" data-toggle="popover" data-placement="top" data-bs-content="Pour inverser la mesure sans toucher à la sonde">Inversion de la mesure <i class="text-secondary fas fa-info-circle"></i> </div>
+
+</div>
+<div class="form-group row">				  
                   <div class="col-sm-3">
-	            <br>			  
+			  
                     <div class="custom-control custom-checkbox small">
                       <input type="checkbox" class="custom-control-input" id="polarity" onchange="sendservermode('polarity');">
                       <label class="custom-control-label" for="polarity">polarité</label>
