--- a/data/minuteur.html
+++ b/data/minuteur.html
@@ -51,19 +51,14 @@
                     Interface
                 </div>
                 <!-- Nav Item - Pages Collapse Menu -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">
-                        <i class="fas fa-fw fa-plug"></i>
-                        <span>Retour Index</span>
-                    </a>
-                </li>
-                <li class="nav-item active">
+
+                <li class="nav-item">
                     <a class="nav-link" href="config.html">
                         <i class="fas fa-fw fa-cog"></i>
                         <span>Configuration</span>
                     </a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/reboot">
                         <i class="fas fa-fw fa-power-off"></i>
                         <span>Reboot</span>
